--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "dev": "nodemon ./src/server.js",
     "start": "node ./src/server.js"
   },
+  "prisma": {
+    "seed": "node prisma/seed.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -21,6 +24,7 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
+    "@types/node": "^24.0.10",
     "prisma": "^6.10.1"
   }
 }
