fix: add build command

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,13 @@
 {
   "version": 2,
+  "buildCommand": "npm run build",
   "builds": [
     {
       "src": "src/server.js",
       "use": "@vercel/node",
-      "config": { "includeFiles": ["src/**", "prisma/**"] }
+      "config": {
+        "includeFiles": ["src/**", "prisma/**"]
+      }
     }
   ],
   "routes": [
