--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon ./src/server.js",
     "start": "node ./src/server.js",
     "build": "prisma generate",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate",
+    "docs": "node src/docs/swagger.js"
   },
   "prisma": {
     "seed": "node prisma/seed.js"
@@ -18,11 +19,16 @@
   "description": "",
   "dependencies": {
     "@hapi/hapi": "^21.4.0",
+    "@hapi/inert": "^7.1.0",
     "@hapi/joi": "^17.1.1",
+    "@hapi/vision": "^7.0.3",
     "@prisma/client": "^6.10.1",
     "dotenv": "^16.6.0",
+    "hapi-swagger": "^17.3.2",
+    "joi": "^17.13.3",
     "nanoid": "^5.1.5",
     "nodemon": "^3.1.10",
+    "swagger-autogen": "^2.23.7",
     "winston": "^3.17.0"
   },
   "devDependencies": {
